# INF443-Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/shaders/: clouds.frag  clouds.vert  commonObjects.frag  commonObjects.vert  depthWrite.frag  dome.frag  includes.glsl  lighting.frag  model.frag  model.vert  noop.frag  position.vert  positionOnly.vert  terrain.frag  terrain.vert  water.frag  water.vert
src/: RunMeDedicated.cpp  colors.hpp  glErrorHandler.cpp  main.cpp
src/model/: Model.cpp  Model.hpp  ModelAnimation.cpp  ModelAnimation.hpp  ModelLoader.cpp  ModelMaterial.cpp  ModelMaterial.hpp  ModelMesh.cpp  ModelMesh.hpp  ModelUtils.cpp  ModelUtils.hpp  assimpVectorTraits.hpp
src/resources/: Cache.cpp  Cache.hpp  FileUtils.cpp  FileUtils.hpp  Framebuffer.hpp  InstanceSet.hpp  Mesh.cpp  Mesh.hpp  Program.cpp  Program.hpp  Query.hpp  Renderbuffer.hpp  Shader.cpp  Shader.hpp  Texture.hpp  TextureFormats.hpp  UniformBuffer.hpp  bufferUtils.hpp
src/scene/: Birds.cpp  Birds.hpp  Camera.cpp  Camera.hpp  ImGui.hpp  ImGuiS.cpp  Lighting.cpp  Lighting.hpp  Scene.cpp  Scene.hpp  SkyClouds.cpp  SkyClouds.hpp  SkyDome.cpp  SkyDome.hpp  Terrain.cpp  Terrain.hpp  TerrainFunction.cpp  TerrainFunction.hpp  Water.cpp  Water.hpp  mesh_utils.cpp  mesh_utils.hpp
src/util/: Frustum.hpp  array_view.hpp  choice.hpp  generic_shared_ptr.hpp  grid.hpp  is_one_of.hpp  make_flags.hpp  range.hpp  string_utils.hpp
src/wrappers/: glDepthComparisonMode.hpp  glException.hpp  glParamFromType.hpp  glfw.hpp
src/wrappers/glfw/: Cursor.hpp  Exception.hpp  Input.hpp  Joystick.hpp  (+5 more)
